# backend/internal/dto/applications/ApplicationDtos.go
@@ -45,3 +45,38 @@ type ApplicationResponseDTO struct {
 	SubmittedAt        time.Time `json:"submittedAt"`
 	UpdatedAt          time.Time `json:"updatedAt"`
 }
+
+type UserDetailsDTO struct {
+	ID          string    `json:"id"`
+	Email       string    `json:"email"`
+	FullName    string    `json:"full_name"`
+	PhoneNumber string    `json:"phone_number"`
+	BirthDate   time.Time `json:"birth_date"`
+}
+
+type SchoolDetailsDTO struct {
+	ID           string `json:"id"`
+	FullName     string `json:"full_name"`
+	Name         string `json:"name"`
+	DistrictID   string `json:"district_id"`
+	DistrictName string `json:"district_name,omitempty"`
+}
+
+type EventDetailsDTO struct {
+	ID      string `json:"id"`
+	Name    string `json:"name"`
+	Subject string `json:"subject"`
+	Class   int    `json:"class"`
+	Status  int    `json:"status"`
+}
+
+type FullApplicationDetailsDTO struct {
+	ID                 string           `json:"id"`
+	Status             int              `json:"status"`
+	ClassParticipation int              `json:"class_participation"`
+	SubmittedAt        time.Time        `json:"submitted_at"`
+	UpdatedAt          time.Time        `json:"updated_at"`
+	User               UserDetailsDTO   `json:"user"`
+	School             SchoolDetailsDTO `json:"school"`
+	Event              EventDetailsDTO  `json:"event"`
+}
